# Python-Provenance-SDK

./: .coverage  .env.example  Makefile  README.md  openapi-generator-config.yaml  pyproject.toml
.github/workflows/: build-wheel.yml
examples/: README.md  get_advisory.py  get_contributor.py  get_package.py  get_repository.py  search_packages.py
scripts/: add_generated_header.py
src/netrise_provenance_sdk/: __init__.py  client.py
src/netrise_provenance_sdk_client/: __init__.py  client.py  errors.py  types.py
src/netrise_provenance_sdk_client/api/: __init__.py
src/netrise_provenance_sdk_client/models/: __init__.py  activity.py  advisory_attribution.py  advisory_attributions.py  advisory_response.py  architecture_option.py  architectures_by_package_type.py  attribution_metadata.py  breach_detail.py  breach_info.py  breached_contributor_email_detail.py  code_hygiene.py  commit_frequency.py  contributions.py  contributions_repos_contributed_to_item.py  contributor_data.py  contributor_list_item.py  contributor_response.py  contributor_risk.py  contributor_risk_maintainer_geo_distribution.py  contributor_security.py  contributor_security_response.py  data_source_attribution.py  error_response.py  identity.py  key_change.py  locations_item.py  metadata.py  organizations_item.py  package_affiliation.py  package_data.py  package_data_dependencies_item.py  package_data_package_details.py  package_data_repository_details.py  package_dependent_response.py  package_response.py  package_search_response.py  popularity.py  repository_data.py  repository_health.py  (+8 more)
(+6 files in other folders)
